--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,13 +14,13 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.CleanCompose"
+        android:theme="@style/Theme.Peer.Starting"
         tools:targetApi="31">
         <activity
             android:name="com.cleancompose.application.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.CleanCompose">
+            android:theme="@style/Theme.Peer.Starting">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
